--- a/Ideas/AttachmentCell.xib
+++ b/Ideas/AttachmentCell.xib
@@ -8,33 +8,40 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AttachmentCell" customModule="Ideas" customModuleProvider="target">
             <connections>
+                <outlet property="imageWell" destination="g4i-De-gFe" id="2Ev-sq-KoI"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView focusRingType="none" id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="513" height="310"/>
+            <rect key="frame" x="0.0" y="0.0" width="339" height="320"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ycn-KC-yrr">
-                    <rect key="frame" x="238" y="20" width="37" height="17"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ycn-KC-yrr">
+                    <rect key="frame" x="151" y="20" width="37" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="oh2-bf-KIA">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" red="0.0" green="0.41176470588235292" blue="0.85098039215686272" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </textFieldCell>
                 </textField>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g4i-De-gFe">
-                    <rect key="frame" x="232" y="131" width="48" height="48"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g4i-De-gFe">
+                    <rect key="frame" x="119" y="110" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="dpG-f2-cUi"/>
+                        <constraint firstAttribute="height" constant="50" id="zko-P2-wcq"/>
+                    </constraints>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="PHW-7m-VHZ"/>
                 </imageView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Ycn-KC-yrr" secondAttribute="bottom" constant="20" symbolic="YES" id="dwO-UC-DBh"/>
+                <constraint firstItem="g4i-De-gFe" firstAttribute="centerX" secondItem="Ycn-KC-yrr" secondAttribute="centerX" id="MGV-9g-STj"/>
+                <constraint firstItem="g4i-De-gFe" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="j6u-We-1eM"/>
+                <constraint firstAttribute="bottom" secondItem="Ycn-KC-yrr" secondAttribute="bottom" constant="20" symbolic="YES" id="sL8-At-vyr"/>
+                <constraint firstItem="Ycn-KC-yrr" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="xSl-Ap-1bQ"/>
             </constraints>
-            <point key="canvasLocation" x="52.5" y="128"/>
+            <point key="canvasLocation" x="39" y="94"/>
         </customView>
         <collectionViewItem id="RCs-2e-0Yl" userLabel="AttachmentCell" customClass="AttachmentCell" customModule="Ideas" customModuleProvider="target">
             <connections>
