--- a/Ideas/Base.lproj/Document.xib
+++ b/Ideas/Base.lproj/Document.xib
@@ -26,16 +26,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxB-xo-34s">
-                        <rect key="frame" x="20" y="125" width="467" height="268"/>
+                        <rect key="frame" x="20" y="95" width="467" height="298"/>
                         <clipView key="contentView" id="CJT-ti-FtT">
-                            <rect key="frame" x="1" y="1" width="465" height="266"/>
+                            <rect key="frame" x="1" y="1" width="465" height="296"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" linkDetection="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="oqx-Qn-74t">
-                                    <rect key="frame" x="0.0" y="0.0" width="465" height="266"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="465" height="296"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="465" height="266"/>
+                                    <size key="minSize" width="465" height="296"/>
                                     <size key="maxSize" width="473" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
@@ -50,18 +50,18 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="wVB-wF-60S">
-                            <rect key="frame" x="450" y="1" width="16" height="266"/>
+                            <rect key="frame" x="450" y="1" width="16" height="296"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-1T-82j">
-                        <rect key="frame" x="20" y="20" width="391" height="97"/>
+                        <rect key="frame" x="20" y="20" width="391" height="67"/>
                         <clipView key="contentView" drawsBackground="NO" id="BHB-dD-lAo">
-                            <rect key="frame" x="1" y="1" width="389" height="95"/>
+                            <rect key="frame" x="1" y="1" width="389" height="65"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <collectionView id="ZW4-Iy-xRE">
-                                    <rect key="frame" x="0.0" y="0.0" width="389" height="95"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="389" height="65"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" scrollDirection="horizontal" id="uvj-1Z-Ixt">
                                         <size key="itemSize" width="50" height="50"/>
@@ -87,8 +87,8 @@
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zK8-tf-6Kb">
                         <rect key="frame" x="419" y="19" width="68" height="69"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="67" id="MZ0-eZ-cNI"/>
-                            <constraint firstAttribute="width" constant="68" id="vXG-wT-IlA"/>
+                            <constraint firstAttribute="height" constant="67" id="ByH-tr-1WA"/>
+                            <constraint firstAttribute="width" constant="68" id="OAN-S7-aSU"/>
                         </constraints>
                         <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="rnA-c8-nFE">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -100,16 +100,16 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="0c0-OW-zMv"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="HAb-WF-ef8"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="8" symbolic="YES" id="IQQ-OZ-4n1"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="8" symbolic="YES" id="SXV-9h-Ji9"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="T6a-vF-qXR"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="VO1-LV-c3E"/>
-                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="aZZ-hf-qeu"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="38" id="dKx-xM-vAj"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="g9p-1C-w5B"/>
-                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="uK1-X2-dC9"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="0PI-2C-VRW"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="1hO-79-pwh"/>
+                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="60N-oN-sRn"/>
+                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="8" symbolic="YES" id="AGy-1P-veE"/>
+                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="IVo-g3-BDi"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="zK8-tf-6Kb" secondAttribute="top" id="QJa-L4-SBU"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="aAA-Fy-ehs"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="fxj-re-CEU"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="nx4-Vj-IJK"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="8" symbolic="YES" id="t0v-XL-DbD"/>
                 </constraints>
             </view>
             <connections>
